修复一些神奇玩意 优化了mixin类的表现，逃离了一堆mixin文件的糟糕情况